--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - G Praveen Kumar Reddy</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('Static', filename='Style.css') }}">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <img src="{{ url_for('static', filename='profile.jpg') }}" alt="Profile Picture" class="profile-pic">
+        <img src="{{ url_for('Static', filename='profile.jpg') }}" alt="Profile Picture" class="profile-pic">
         <p>
             Hi, I'm <strong>G Praveen Kumar Reddy</strong>, a passionate **Machine Learning Engineer & Java Developer**.  
             I specialize in **AI-driven applications, data-driven solutions, and scalable software development**.  
