--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact - Portfolio</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='Style.css') }}">
 </head>
 <body>
     <header>
