Updated project details and modal functionality

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
             <a href="https://github.com/Praveen5612" target="_blank">
                 <i class="fab fa-github"></i> GitHub
             </a>
-            <a href="www.linkedin.com/in/praveen-reddy-gollapalli-6372a8299/" target="_blank">
+            <a href="https://www.linkedin.com/in/praveen-reddy-gollapalli-6372a8299/" target="_blank">
                 <i class="fab fa-linkedin"></i> LinkedIn
             </a>
             <a href="https://www.naukri.com/mnjuser/profile?id=&altresid" target="_blank">
